feat: add session control and upload files
