# server/config/swagger.json
@@ -109,6 +109,11 @@
         "description": "Endpoints para listar (filtrado ou não) os usuários ordenados por nome",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "name",
             "in": "query",
             "description": "pode ser o nome ou parte do nome do usuário ou do seu nickname.",
@@ -138,6 +143,9 @@
             },
             "description": "OK"
           },
+          "401": {
+            "description": "Não autorizado"
+          },
           "500": {
             "description": "Erro Interno do Servidor",
             "schema": {
@@ -147,172 +155,30 @@
         }
       }
     },
-    "/users/{id}": {
-      "get": {
+    "/users/authenticate": {
+      "post": {
         "tags": [
           "User"
         ],
-        "description": "Endpoints para recuperar um usuário",
+        "description": "Endpoints para autenticar um usuário",
         "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "ObjectId",
-            "description": "User ID."
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "$ref": "#/definitions/User"
-                },
-                "status": {
-                  "type": "number",
-                  "example": 200
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "OK"
-          },
-          "404": {
-            "description": "Usuário não encontrado",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "errors": {
-                  "type": "array",
-                  "example": [
-                    "Usuário não encontrado"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "status": {
-                  "type": "number",
-                  "example": 404
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "422": {
-            "description": "Erro de Validação",
-            "schema": {
-              "$ref": "#/definitions/IdValidator"
-            }
-          },
-          "500": {
-            "description": "Erro Interno do Servidor",
-            "schema": {
-              "$ref": "#/definitions/Error500"
-            }
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "User"
-        ],
-        "description": "Endpoints para editar um usuário",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "User ID."
-          },
           {
             "name": "",
             "in": "body",
-            "description": "Informações do usuário",
-            "schema": {
-              "$ref": "#/definitions/UpdateUser"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
+            "description": "nickname e password do usuário",
             "schema": {
               "type": "object",
               "properties": {
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/User"
-                  }
+                "nickname": {
+                  "type": "string",
+                  "example": "zoro_oliveira"
                 },
-                "status": {
-                  "type": "number",
-                  "example": 200
+                "password": {
+                  "type": "string",
+                  "example": "123456"
                 }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "OK"
-          },
-          "404": {
-            "description": "Usuário não encontrado",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "errors": {
-                  "type": "array",
-                  "example": [
-                    "Usuário não encontrado"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "status": {
-                  "type": "number",
-                  "example": 404
-                }
-              },
-              "xml": {
-                "name": "main"
               }
             }
-          },
-          "422": {
-            "description": "Erro de Validação",
-            "schema": {
-              "$ref": "#/definitions/UserUpdateValidator"
-            }
-          },
-          "500": {
-            "description": "Erro Interno do Servidor",
-            "schema": {
-              "$ref": "#/definitions/Error500"
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "User"
-        ],
-        "description": "Endpoints para remover um usuário",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "ObjectId",
-            "description": "User ID."
           }
         ],
         "responses": {
@@ -334,15 +200,18 @@
             },
             "description": "OK"
           },
+          "401": {
+            "description": "Não autorizado"
+          },
           "404": {
-            "description": "Usuário não encontrado",
+            "description": "Autenticação inválida",
             "schema": {
               "type": "object",
               "properties": {
                 "errors": {
                   "type": "array",
                   "example": [
-                    "Usuário não encontrado"
+                    "Usuário ou senha inválidos"
                   ],
                   "items": {
                     "type": "string"
@@ -356,12 +225,6 @@
               "xml": {
                 "name": "main"
               }
-            }
-          },
-          "422": {
-            "description": "Erro de Validação",
-            "schema": {
-              "$ref": "#/definitions/IdValidator"
             }
           },
           "500": {
@@ -421,27 +284,284 @@
         }
       }
     },
-    "/users/authenticate": {
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "description": "Endpoints para autenticar um usuário",
+    "/files/{file}": {
+      "get": {
+        "description": "",
         "parameters": [
           {
-            "name": "",
+            "name": "file",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Não Encontrado"
+          }
+        }
+      }
+    },
+    "/users/logout": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
             "in": "body",
-            "description": "nickname e password do usuário",
             "schema": {
               "type": "object",
               "properties": {
-                "nickname": {
-                  "type": "string",
-                  "example": "zoro_oliveira"
+                "userData": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
+          }
+        }
+      }
+    },
+    "/user/me": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoints para recuperar um usuário",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "ObjectId",
+            "description": "User ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "$ref": "#/definitions/User"
                 },
-                "password": {
-                  "type": "string",
-                  "example": "123456"
+                "status": {
+                  "type": "number",
+                  "example": 200
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
+          },
+          "404": {
+            "description": "Usuário não encontrado",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "errors": {
+                  "type": "array",
+                  "example": [
+                    "Usuário não encontrado"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "status": {
+                  "type": "number",
+                  "example": 404
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Erro de Validação",
+            "schema": {
+              "$ref": "#/definitions/IdValidator"
+            }
+          },
+          "500": {
+            "description": "Erro Interno do Servidor",
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoints para editar um usuário",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "",
+            "in": "body",
+            "description": "Informações do usuário",
+            "schema": {
+              "$ref": "#/definitions/UpdateUser"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/User"
+                  }
+                },
+                "status": {
+                  "type": "number",
+                  "example": 200
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "OK"
+          },
+          "400": {
+            "description": "Solicitação Inválida"
+          },
+          "401": {
+            "description": "Não autorizado"
+          },
+          "404": {
+            "description": "Usuário não encontrado",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "errors": {
+                  "type": "array",
+                  "example": [
+                    "Usuário não encontrado"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "status": {
+                  "type": "number",
+                  "example": 404
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "422": {
+            "description": "Erro de Validação",
+            "schema": {
+              "$ref": "#/definitions/UserUpdateValidator"
+            }
+          },
+          "500": {
+            "description": "Erro Interno do Servidor",
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoints para remover um usuário",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "ObjectId",
+            "description": "User ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userData": {
+                  "example": "any"
                 }
               }
             }
@@ -466,15 +586,18 @@
             },
             "description": "OK"
           },
+          "401": {
+            "description": "Não autorizado"
+          },
           "404": {
-            "description": "Autenticação inválida",
+            "description": "Usuário não encontrado",
             "schema": {
               "type": "object",
               "properties": {
                 "errors": {
                   "type": "array",
                   "example": [
-                    "Usuário ou senha inválidos"
+                    "Usuário não encontrado"
                   ],
                   "items": {
                     "type": "string"
@@ -490,11 +613,17 @@
               }
             }
           },
+          "422": {
+            "description": "Erro de Validação",
+            "schema": {
+              "$ref": "#/definitions/IdValidator"
+            }
+          },
           "500": {
+            "description": "Erro Interno do Servidor",
             "schema": {
               "$ref": "#/definitions/Error500"
-            },
-            "description": "Erro Interno do Servidor"
+            }
           }
         }
       }
@@ -534,6 +663,9 @@
             },
             "description": "Criado"
           },
+          "400": {
+            "description": "Solicitação Inválida"
+          },
           "422": {
             "description": "Erro de Validação",
             "schema": {
@@ -562,6 +694,23 @@
             "required": true,
             "type": "ObjectId",
             "description": "Post ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userData": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -582,6 +731,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "404": {
             "description": "Post não encontrado",
@@ -633,6 +785,11 @@
             "required": true,
             "type": "ObjectId",
             "description": "Post ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -653,6 +810,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "404": {
             "description": "Post não encontrado",
@@ -699,7 +859,13 @@
           "Post"
         ],
         "description": "Endpoints para listar o feed de posts do mais recente para o mais antigo",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "schema": {
@@ -721,6 +887,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "500": {
             "description": "Erro Interno do Servidor",
@@ -751,6 +920,11 @@
             "required": true,
             "type": "ObjectId",
             "description": "User ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -777,6 +951,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "404": {
             "description": "Post não encontrado",
@@ -832,6 +1009,11 @@
             "description": "Post ID."
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "",
             "in": "body",
             "description": "Informações do comentário",
@@ -864,6 +1046,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "404": {
             "description": "Post não encontrado",
@@ -924,6 +1109,23 @@
             "required": true,
             "type": "ObjectId",
             "description": "Comentário ID."
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userData": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -950,6 +1152,9 @@
               }
             },
             "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
           },
           "404": {
             "description": "Post ou comentário não encontrado",
