# server/src/services/user-service.ts
@@ -2,6 +2,8 @@ import IResult from "../interfaces/iresult";
 import IUser from "../interfaces/iuser";
 import { User } from "../models/user";
 import CryptoJS from "crypto-js";
+import RedisDb from "../database/redisdb";
+import Auth from "../auth/auth";
 
 export default class UserService {
     async create(data: IUser): Promise<IResult<IUser>> {
@@ -15,6 +17,15 @@ export default class UserService {
 
             data.password = CryptoJS.SHA256(data.password).toString();
             const user = await User.create(data);
+            const auth = await Auth.createSession(data);
+
+            if (auth.error) {
+                result.errors?.push(auth.message);
+                result.status = 500;
+                return result;
+            }
+
+            result.token = auth.token;
             result.data = user;
             result.status = 201;
         } catch (error: any) {
@@ -63,7 +74,12 @@ export default class UserService {
             if (!name) {
                 users = await User.find().sort({ name: 1, nickname: 1 });
             } else {
-                users = await User.find({ $or: [{ nickname: new RegExp(name, "i") }, { name: new RegExp(name, "i") }] }).sort({
+                users = await User.find({
+                    $or: [
+                        { nickname: new RegExp(name, "i") },
+                        { name: new RegExp(name, "i") },
+                    ],
+                }).sort({
                     name: 1,
                     nickname: 1,
                 });
@@ -115,7 +131,10 @@ export default class UserService {
         return result;
     }
 
-    async authenticate(nickname: string, password: string): Promise<IResult<IUser>> {
+    async authenticate(
+        nickname: string,
+        password: string
+    ): Promise<IResult<IUser>> {
         let result: IResult<IUser> = { errors: [] };
         try {
             password = CryptoJS.SHA256(password).toString();
